Core/xpipe-gateway/k8s/resources/demo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: xpipe-gateway
  namespace: xpipe-demo
  labels:
    app: xpipe-gateway
  #annotations:
  #  nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
spec:
  ingressClassName: nginx
  rules:
  - host: demo-api-xpipe.sindria.org
    http:
      paths:
        -  path: /
           pathType: Prefix
           backend:
            service:
              name: xpipe-gateway
              port:
                number: 80
  tls:
  - hosts:
    - demo-api-xpipe.sindria.org
    secretName: tls-sindriaorg
